<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/CustomWindowTitleBarBG"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewStylingPageHeader"
        android:textColor="@color/custom_title_background"
        android:text="@string/order_id"/>
    
    
    <TextView
        android:id="@+id/view_orderid" 
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        style="@style/TextViewStylingPageHeader"
        android:textColor="@color/custom_title_background"
        />
    
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:weightSum="100"
    android:orientation="horizontal" >
	
    <TextView 
        android:layout_width="0dp"
        android:layout_weight="40"
        android:layout_height="wrap_content"
        style="@style/OrderTextViewStylingHeader"
        android:text="@string/name"
        />
    
	<TextView 
        android:layout_width="0dp"
        android:layout_weight="20"
        android:layout_height="wrap_content"
        style="@style/OrderTextViewStylingHeader"
         android:text="@string/quantity"/>
	
	<TextView 
        android:layout_width="0dp"
        android:layout_weight="20"
        android:layout_height="wrap_content"
      	style="@style/OrderTextViewStylingHeader"
         android:text="@string/item"/>
	
	 <TextView 
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="20"
        style="@style/OrderTextViewStylingHeader"
       	android:text="@string/price"/>
	</LinearLayout>
    
   <ListView
        android:id="@+id/view_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />
   
   <LinearLayout 
       android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_marginTop="20dp"
       android:orientation="vertical"
       android:layout_weight="1">
	 	
       <LinearLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="right"
       android:weightSum="100">
       
	        <TextView 
	        android:layout_width="0dp"
	        android:layout_weight="50"
	        android:gravity="center"
	        android:layout_height="wrap_content"
	        style="@style/TextViewStylingHeader"
	        android:text="@string/total"
	        />
	         
	        <TextView 
	        android:id="@+id/view_totalsum"
	        android:layout_width="0dp"
	        android:layout_weight="50"
	        android:layout_height="wrap_content"
	        style="@style/TextViewStylingHeader"
	        android:text="1500"
	        />
        
        </LinearLayout>
        
       <Button 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           style="@style/ButtonViewStyling"
           android:background="@drawable/button"
           android:onClick="proceedToCheckOut"
           android:text="@string/cancelorder"
           android:visibility="gone"/>
        	
   </LinearLayout>


</LinearLayout>