<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    style="@style/CustomWindowTitleBarBG"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/whitebacknew"
    >

  <ImageView 
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shopcakesmall"/>
    
    <Button 
        android:id="@+id/cakes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_cakes"
        android:textSize="18sp"
        android:background="@color/yellow"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="90dp"
        android:onClick="gotoProduct"
        android:paddingRight="90dp"
        android:layout_marginTop="10dp"/>
    
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shadow"/>
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shopsweetssmall"/>
    
    <Button 
        android:id="@+id/sweets_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_sweets"
        android:textSize="18sp"
        android:background="@color/yellow"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:onClick="gotoProduct"
        android:layout_marginTop="10dp"/>
    
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shadow"/>
    
  
 <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_message"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

</LinearLayout>